--- a/asdf/.htaccess
+++ b/asdf/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine on
-RewriteBase /~vajo12/phpmvc/T4/asdf
+RewriteBase [YOUR PATH]/asdf
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
